Fixed issue where preview popups were displayed behind input boxes

--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,7 @@ tr:hover .timer-hidden {
 .MJpopup {
 	display: inline-block;
 	position: absolute;
+	z-index: 3;
 	top: 50%;
 	left: -23px;
 	transform: translateX(-100%) translateY(-50%);
